== master (in Git)

* Minor enhancements

  * Support passing in arrays of raw cookies in addition to a newline
    separated string
  * Support after_request callbacks in MockSession for things like running
    background jobs
  * Allow multiple named sessions
  * Initialize Rack::Test::Sessions with Rack::MockSessions instead of apps.
    This change should help integration with other Ruby web frameworks
    (like Merb).
  * Support sending bodies for PUT requests (Larry Diehl)

== 0.3.0 / 2009-05-17

* Major enhancements

  * Ruby 1.9 compatible (Simon Rozet, Michael Fellinger)

* Minor enhancements

  * Add CookieJar#[] and CookieJar#[]= methods
  * Make the default host configurable
  * Use Rack::Lint and fix errors (Simon Rozet)
  * Extract Rack::MockSession from Rack::Test::Session to handle tracking
    the last request and response and the cookie jar
  * Add #set_cookie and #clear_cookies methods
  * Rename #authorize to #basic_authorize (#authorize remains as an alias)
    (Simon Rozet)

== 0.2.0 / 2009-04-26

Because #last_response is now a MockResponse instead of a Rack::Response,
#last_response.body now returns a string instead of an array.

* Major enhancements

  * Support multipart requests via the UploadedFile class (thanks, Rails)

* Minor enhancements

  * Updated for Rack 1.0
  * Don't require rubygems (See http://gist.github.com/54177)
  * Support HTTP Digest authentication with the #digest_authorize method
  * #last_response returns a MockResponse instead of a Response
    (Michael Fellinger)

== 0.1.0 / 2009-03-02

* 1 major enhancement

  * Birthday!